# Robot-Sensing-and-Navigation

./: README.md
LAB1/: README.md  Stationary_Data_Analysis.ipynb  Walking_Data_Analysis.ipynb
LAB1/src/gps_driver/: setup.py
LAB1/src/gps_driver/gps_driver/: driver.py
LAB1/src/gps_driver/launch/: gps_launch.py
LAB1/src/gps_msgs/: CMakeLists.txt  package.xml
LAB1/stationary_data/: metadata.yaml  stationary_data_0.db3
LAB1/walking_data/: metadata.yaml  walking_data_0.db3
LAB3/Analysis/: IMU_Conversion.ipynb  Stationary_Data_Analysis.ipynb  allan.m
LAB3/Data/: fivehourdata_drivelink
LAB3/src/imu_driver/: setup.cfg
LAB3/src/imu_driver/imu_driver/: driver.py
LAB3/src/imu_driver/launch/: imu_launch.py
LAB3/src/imu_msgs/: CMakeLists.txt  package.xml
LAB3/src/imu_msgs/msg/: IMUmsg.msg
LAB4/Analysis/: EKF_Calibration.ipynb  LAB4_part1.ipynb  LAB4_part2.ipynb  Static_Calibration.ipynb
LAB4/Data/data_driving.bag/: metadata.yaml
LAB4/Data/data_going_in_circles.bag/: metadata.yaml
LAB4/src/gps_driver/: package.xml
LAB4/src/gps_interfaces/: CMakeLists.txt  package.xml
LAB4/src/gps_interfaces/msg/: GPSmsg.msg
LAB4/src/imu_driver/: package.xml  setup.py
LAB4/src/imu_driver/imu_driver/: driver.py
LAB4/src/imu_driver/launch/: gps_imu_launch.py
LAB4/src/imu_interfaces/: CMakeLists.txt  package.xml
LAB5/: utils.py
PA0/: Assignment 0
PA1/my_package/: package.xml  setup.py
PA1/py_pubsub/: package.xml  setup.py
PA1/py_pubsub/py_pubsub/: publisher_member_function.py
PA1/py_srvcli/: package.xml  setup.py
