<?xml version="1.0"?>
<package format="3">
  <name>imu_driver</name>
  <version>0.0.0</version>
  <description>IMU Driver for VN-100 in ROS2</description>

  <maintainer email="ramkumar.g@northeastern.edu">rgautham20</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>imu_msgs</depend>
  
  <!-- Testing and linting dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

