<?xml version="1.0"?>
<package format="3">
  <name>imu_interfaces</name>
  <version>0.0.0</version>
  <description>IMU Driver for VN-100 in ROS2</description>

  <maintainer email="ramkumar.g@northeastern.edu">rgautham20</maintainer>
  <license>Apache-2.0</license>

  <!-- Build and Exec dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Declare membership in the rosidl_interface_packages group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

